[package]
name = "aeiou"
version = "0.0.1"
license = "MIT"
edition = "2021"
rust-version = "1.64.0"
authors = ["Hayden Stainsby <hds@caffeineconcepts.com>"]
readme = "README.md"
homepage = "https://github.com/hds/aeiou"
repository = "https://github.com/hds/aeiou"
description = """
Async Executor Instrumentation Observability Utility

A tracing subscriber layer that outputs Tokio's tracing instrumentation to the terminal in a
format conducive to debugging.
"""
categories = ["development-tools::debugging", "development-tools::profiling"]
keywords = ["tracing", "tracing-subscriber", "tokio", "debugging", "async"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
