[package]
name = "ari-subscriber"
version = "0.0.1"
license = "MIT"
edition = "2021"
rust-version = "1.65.0"
authors = ["Hayden Stainsby <hds@caffeineconcepts.com>"]
readme = "README.md"
homepage = "https://github.com/hds/ari-subscriber"
repository = "https://github.com/hds/ari-subscriber"
description = """
Async Executor Instrumentation Observability Utility

A tracing subscriber layer that outputs Tokio's tracing instrumentation to the terminal in a
format conducive to debugging.
"""
categories = ["development-tools::debugging", "development-tools::profiling"]
keywords = ["tracing", "tracing-subscriber", "tokio", "debugging", "async"]

[dependencies]
chrono = "0.4"
colored = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
console-subscriber = "0.2"
tokio = { "version" = "1.34", features = ["full", "tracing"] }
